Formata uma resposta vindo do input (altura).